# codex

anecdoct-rs/analytics/: BUILD.bazel  Cargo.toml
anecdoct-rs/analytics/src/: accepted_lines.rs  analytics_client_tests.rs  client.rs  client_tests.rs  events.rs  facts.rs  lib.rs  reducer.rs
anecdoct-rs/anecdoct-mcp/: BUILD.bazel  Cargo.toml
anecdoct-rs/anecdoct-mcp/src/: anecdoct_apps.rs  auth_elicitation.rs  connection_manager.rs  connection_manager_tests.rs  elicitation.rs  lib.rs  rmcp_client.rs  runtime.rs  server.rs  tools.rs
anecdoct-rs/app-server/: BUILD.bazel  Cargo.toml  README.md
anecdoct-rs/app-server-client/: BUILD.bazel  Cargo.toml  README.md
anecdoct-rs/app-server-client/src/: lib.rs  remote.rs
anecdoct-rs/app-server-daemon/: BUILD.bazel  Cargo.toml  README.md
anecdoct-rs/app-server-daemon/src/: client.rs  lib.rs  managed_install.rs  managed_install_tests.rs  update_loop.rs
anecdoct-rs/app-server-protocol/: BUILD.bazel  Cargo.toml
anecdoct-rs/app-server-protocol/src/: experimental_api.rs  export.rs  jsonrpc_lite.rs
anecdoct-rs/app-server-protocol/tests/: schema_fixtures.rs
anecdoct-rs/app-server-test-client/: BUILD.bazel  Cargo.toml  README.md
anecdoct-rs/app-server-test-client/scripts/: live_elicitation_hold.sh
anecdoct-rs/app-server-test-client/src/: lib.rs  main.rs
anecdoct-rs/app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_service.rs  config_manager_service_tests.rs  dynamic_tools.rs  error_code.rs  extensions.rs  filters.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs
anecdoct-rs/apply-patch/: BUILD.bazel  Cargo.toml
anecdoct-rs/apply-patch/src/: invocation.rs  lib.rs  main.rs  parser.rs  standalone_executable.rs  streaming_parser.rs
anecdoct-rs/arg0/: BUILD.bazel  Cargo.toml
anecdoct-rs/arg0/src/: lib.rs
anecdoct-rs/backend-client/: BUILD.bazel  Cargo.toml
anecdoct-rs/backend-client/src/: client.rs  types.rs
anecdoct-rs/bwrap/: BUILD.bazel  Cargo.toml  build.rs  config.h
anecdoct-rs/bwrap/src/: main.rs
anecdoct-rs/chatgpt/: BUILD.bazel  Cargo.toml  README.md
anecdoct-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  connectors.rs  get_task.rs  workspace_settings.rs
anecdoct-rs/chatgpt/tests/: task_turn_fixture.json
anecdoct-rs/cli/: BUILD.bazel  Cargo.toml
anecdoct-rs/cli/src/: app_cmd.rs  debug_sandbox.rs  doctor.rs  lib.rs  login.rs  main.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  state_db_recovery.rs  wsl_paths.rs
anecdoct-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  plugin_cli.rs  update.rs
anecdoct-rs/cloud-tasks/: BUILD.bazel  Cargo.toml
anecdoct-rs/cloud-tasks-client/: BUILD.bazel  Cargo.toml
anecdoct-rs/cloud-tasks-client/src/: http.rs
anecdoct-rs/cloud-tasks-mock-client/: BUILD.bazel  Cargo.toml
anecdoct-rs/cloud-tasks-mock-client/src/: mock.rs
anecdoct-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
anecdoct-rs/cloud-tasks/tests/: env_filter.rs
anecdoct-rs/collaboration-mode-templates/: BUILD.bazel  Cargo.toml
anecdoct-rs/config/: BUILD.bazel  Cargo.toml
anecdoct-rs/config/examples/: generate-proto.rs
anecdoct-rs/config/scripts/: generate-proto.sh
anecdoct-rs/config/src/: config_requirements.rs  config_toml.rs  diagnostics.rs  fingerprint.rs  hook_config.rs  lib.rs  marketplace_edit.rs  mcp_edit.rs  mcp_edit_tests.rs  mcp_types.rs  mcp_types_tests.rs  permissions_toml.rs  plugin_edit.rs  profile_toml.rs  requirements_exec_policy.rs  schema.rs  skills_config.rs  state.rs  strict_config.rs  strict_config_tests.rs  thread_config.rs  tui_keymap.rs  types.rs
anecdoct-rs/core/: BUILD.bazel  Cargo.toml  README.md  config.schema.json  gpt-5.2-anecdoct_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_anecdoct_prompt.md  prompt_with_apply_patch_instructions.md
anecdoct-rs/core-api/: BUILD.bazel  Cargo.toml
anecdoct-rs/core-api/src/: lib.rs
anecdoct-rs/core-plugins/: BUILD.bazel  Cargo.toml
anecdoct-rs/core-plugins/src/: installed_marketplaces.rs  lib.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  manifest.rs  marketplace.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_tests.rs  marketplace_upgrade.rs  remote.rs  remote_bundle.rs  remote_legacy.rs  startup_remote_sync.rs  startup_remote_sync_tests.rs  startup_sync.rs  startup_sync_tests.rs  store.rs  store_tests.rs  test_support.rs
anecdoct-rs/core-skills/: BUILD.bazel  Cargo.toml
anecdoct-rs/core-skills/src/: config_rules.rs  injection.rs  injection_tests.rs  invocation_utils.rs  invocation_utils_tests.rs  loader.rs  loader_tests.rs  manager.rs  manager_tests.rs  mention_counts.rs  model.rs  remote.rs  render.rs  system.rs
anecdoct-rs/core/src/: agents_md.rs  agents_md_tests.rs  anecdoct_delegate.rs  anecdoct_delegate_tests.rs  anecdoct_thread.rs  apply_patch.rs  arc_monitor.rs  arc_monitor_tests.rs  attestation.rs  client.rs  client_common.rs  client_common_tests.rs  client_tests.rs  command_canonicalization.rs  command_canonicalization_tests.rs  compact.rs  compact_remote.rs  compact_remote_v2.rs  compact_tests.rs  config_lock.rs  connectors.rs  connectors_tests.rs  consequential_tool_message_templates.json  environment_selection.rs  event_mapping.rs  event_mapping_tests.rs  exec.rs  exec_env.rs  exec_env_tests.rs  exec_policy.rs  exec_policy_tests.rs  exec_tests.rs  function_tool.rs  git_info_tests.rs  goals.rs  (+65 more)
anecdoct-rs/exec/: BUILD.bazel  Cargo.toml
anecdoct-rs/exec-server/: BUILD.bazel  Cargo.toml  README.md
anecdoct-rs/execpolicy/: BUILD.bazel  Cargo.toml  README.md
(+1751 files in other folders)
