[package]
edition.workspace = true
license.workspace = true
name = "anecdoct-analytics"
version.workspace = true

[lib]
doctest = false
name = "anecdoct_analytics"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anecdoct-app-server-protocol = { workspace = true }
anecdoct-git-utils = { workspace = true }
anecdoct-login = { workspace = true }
anecdoct-model-provider = { workspace = true }
anecdoct-plugin = { workspace = true }
anecdoct-protocol = { workspace = true }
os_info = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
] }
tracing = { workspace = true, features = ["log"] }

[dev-dependencies]
anecdoct-utils-absolute-path = { workspace = true }
pretty_assertions = { workspace = true }
