[package]
edition.workspace = true
license.workspace = true
name = "anecdoct-mcp"
version.workspace = true

[lib]
name = "anecdoct_mcp"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
anecdoct-async-utils = { workspace = true }
anecdoct-api = { workspace = true }
anecdoct-config = { workspace = true }
anecdoct-exec-server = { workspace = true }
anecdoct-login = { workspace = true }
anecdoct-model-provider = { workspace = true }
anecdoct-otel = { workspace = true }
anecdoct-plugin = { workspace = true }
anecdoct-protocol = { workspace = true }
anecdoct-rmcp-client = { workspace = true }
anecdoct-utils-plugins = { workspace = true }
futures = { workspace = true }
regex-lite = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rmcp = { workspace = true, default-features = false, features = ["base64", "macros", "schemars", "server"] }
tempfile = { workspace = true }
