[package]
name = "anecdoct-app-server-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "anecdoct_app_server_client"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anecdoct-app-server = { workspace = true }
anecdoct-app-server-protocol = { workspace = true }
anecdoct-arg0 = { workspace = true }
anecdoct-config = { workspace = true }
anecdoct-core = { workspace = true }
anecdoct-exec-server = { workspace = true }
anecdoct-feedback = { workspace = true }
anecdoct-protocol = { workspace = true }
anecdoct-uds = { workspace = true }
anecdoct-utils-absolute-path = { workspace = true }
anecdoct-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
