[package]
name = "anecdoct-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "anecdoct-app-server"
path = "src/main.rs"

[[bin]]
name = "anecdoct-app-server-test-notify-capture"
path = "src/bin/notify_capture.rs"

[lib]
name = "anecdoct_app_server"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
    "ws",
] }
anecdoct-analytics = { workspace = true }
anecdoct-arg0 = { workspace = true }
anecdoct-cloud-requirements = { workspace = true }
anecdoct-config = { workspace = true }
anecdoct-core = { workspace = true }
anecdoct-core-plugins = { workspace = true }
anecdoct-exec-server = { workspace = true }
anecdoct-extension-api = { workspace = true }
anecdoct-external-agent-migration = { workspace = true }
anecdoct-external-agent-sessions = { workspace = true }
anecdoct-features = { workspace = true }
anecdoct-guardian = { workspace = true }
anecdoct-git-utils = { workspace = true }
anecdoct-file-watcher = { workspace = true }
anecdoct-hooks = { workspace = true }
anecdoct-otel = { workspace = true }
anecdoct-plugin = { workspace = true }
anecdoct-shell-command = { workspace = true }
anecdoct-utils-cli = { workspace = true }
anecdoct-utils-pty = { workspace = true }
anecdoct-backend-client = { workspace = true }
anecdoct-file-search = { workspace = true }
anecdoct-chatgpt = { workspace = true }
anecdoct-login = { workspace = true }
anecdoct-memories-extension = { workspace = true }
anecdoct-memories-write = { workspace = true }
anecdoct-mcp = { workspace = true }
anecdoct-model-provider = { workspace = true }
anecdoct-models-manager = { workspace = true }
anecdoct-protocol = { workspace = true }
anecdoct-app-server-protocol = { workspace = true }
anecdoct-app-server-transport = { workspace = true }
anecdoct-feedback = { workspace = true }
anecdoct-rmcp-client = { workspace = true }
anecdoct-rollout = { workspace = true }
anecdoct-sandboxing = { workspace = true }
anecdoct-state = { workspace = true }
anecdoct-thread-store = { workspace = true }
anecdoct-tools = { workspace = true }
anecdoct-utils-absolute-path = { workspace = true }
anecdoct-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
axum = { workspace = true, default-features = false, features = [
    "http1",
    "json",
    "tokio",
] }
base64 = { workspace = true }
anecdoct-model-provider-info = { workspace = true }
anecdoct-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
flate2 = { workspace = true }
hmac = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pretty_assertions = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls"] }
rmcp = { workspace = true, default-features = false, features = [
    "elicitation",
    "server",
    "transport-streamable-http-server",
] }
serial_test = { workspace = true }
sha2 = { workspace = true }
shlex = { workspace = true }
tar = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
