[package]
name = "anecdoct-chatgpt"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anecdoct-app-server-protocol = { workspace = true }
anecdoct-connectors = { workspace = true }
anecdoct-core = { workspace = true }
anecdoct-core-plugins = { workspace = true }
anecdoct-git-utils = { workspace = true }
anecdoct-login = { workspace = true }
anecdoct-model-provider = { workspace = true }
anecdoct-plugin = { workspace = true }
anecdoct-utils-cli = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
anecdoct-utils-cargo-bin = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[lib]
doctest = false
