
[package]
edition.workspace = true
license.workspace = true
name = "anecdoct-cloud-tasks-mock-client"
version.workspace = true

[lib]
name = "anecdoct_cloud_tasks_mock_client"
path = "src/lib.rs"
test = false
doctest = false

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
anecdoct-cloud-tasks-client = { workspace = true }
diffy = { workspace = true }
