load("//:defs.bzl", "anecdoct_rust_crate")

anecdoct_rust_crate(
    name = "collaboration-mode-templates",
    crate_name = "anecdoct_collaboration_mode_templates",
    compile_data = glob(["templates/*.md"]),
)

exports_files(
    glob(["templates/*.md"]),
    visibility = ["//visibility:public"],
)
