load("//:defs.bzl", "anecdoct_rust_crate")

anecdoct_rust_crate(
    name = "core-skills",
    crate_name = "anecdoct_core_skills",
    compile_data = glob(
        include = ["**"],
        exclude = [
            "**/* *",
            "BUILD.bazel",
            "Cargo.toml",
        ],
        allow_empty = True,
    ),
)
