[package]
edition.workspace = true
license.workspace = true
name = "anecdoct-core"
version.workspace = true

[lib]
name = "anecdoct_core"
path = "src/lib.rs"

[[bin]]
name = "anecdoct-write-config-schema"
path = "src/bin/config_schema.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bm25 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
anecdoct-analytics = { workspace = true }
anecdoct-api = { workspace = true }
anecdoct-app-server-protocol = { workspace = true }
anecdoct-apply-patch = { workspace = true }
anecdoct-async-utils = { workspace = true }
anecdoct-code-mode = { workspace = true }
anecdoct-connectors = { workspace = true }
anecdoct-config = { workspace = true }
anecdoct-core-plugins = { workspace = true }
anecdoct-core-skills = { workspace = true }
anecdoct-exec-server = { workspace = true }
anecdoct-extension-api = { workspace = true }
anecdoct-features = { workspace = true }
anecdoct-feedback = { workspace = true }
anecdoct-login = { workspace = true }
anecdoct-memories-read = { workspace = true }
anecdoct-mcp = { workspace = true }
anecdoct-model-provider-info = { workspace = true }
anecdoct-models-manager = { workspace = true }
anecdoct-shell-command = { workspace = true }
anecdoct-execpolicy = { workspace = true }
anecdoct-git-utils = { workspace = true }
anecdoct-hooks = { workspace = true }
anecdoct-network-proxy = { workspace = true }
anecdoct-otel = { workspace = true }
anecdoct-plugin = { workspace = true }
anecdoct-model-provider = { workspace = true }
anecdoct-protocol = { workspace = true }
anecdoct-response-debug-context = { workspace = true }
anecdoct-rollout = { workspace = true }
anecdoct-rollout-trace = { workspace = true }
anecdoct-rmcp-client = { workspace = true }
anecdoct-sandboxing = { workspace = true }
anecdoct-state = { workspace = true }
anecdoct-terminal-detection = { workspace = true }
anecdoct-thread-store = { workspace = true }
anecdoct-tools = { workspace = true }
anecdoct-utils-absolute-path = { workspace = true }
anecdoct-utils-cache = { workspace = true }
anecdoct-utils-image = { workspace = true }
anecdoct-utils-home-dir = { workspace = true }
anecdoct-utils-output-truncation = { workspace = true }
anecdoct-utils-path = { workspace = true }
anecdoct-utils-plugins = { workspace = true }
anecdoct-utils-pty = { workspace = true }
anecdoct-utils-string = { workspace = true }
anecdoct-utils-stream-parser = { workspace = true }
anecdoct-utils-template = { workspace = true }
anecdoct-windows-sandbox = { package = "anecdoct-windows-sandbox", path = "../windows-sandbox-rs" }
csv = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
iana-time-zone = { workspace = true }
image = { workspace = true, features = ["jpeg", "png", "webp"] }
indexmap = { workspace = true }
libc = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
regex-lite = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
rmcp = { workspace = true, default-features = false, features = [
    "base64",
    "macros",
    "schemars",
    "server",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha1 = { workspace = true }
shlex = { workspace = true }
similar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true, features = ["log"] }
url = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
which = { workspace = true }
whoami = { workspace = true }

# Build OpenSSL from source for musl builds.
[target.x86_64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

# Build OpenSSL from source for musl builds.
[target.aarch64-unknown-linux-musl.dependencies]
openssl-sys = { workspace = true, features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
anecdoct-shell-escalation = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
anecdoct-otel = { workspace = true }
anecdoct-test-binary-support = { workspace = true }
anecdoct-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
ctor = { workspace = true }
insta = { workspace = true }
maplit = { workspace = true }
opentelemetry = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
test-case = "3.3.1"
opentelemetry_sdk = { workspace = true, features = [
    "experimental_metrics_custom_reader",
    "metrics",
] }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
walkdir = { workspace = true }
wiremock = { workspace = true }
zstd = { workspace = true }

[package.metadata.cargo-shear]
ignored = ["openssl-sys"]
