load("//:defs.bzl", "anecdoct_rust_crate")

anecdoct_rust_crate(
    name = "exec-server",
    crate_name = "anecdoct_exec_server",
    deps_extra = [
        "@crates//:toml",
    ],
    # Keep the crate's integration tests single-threaded under Bazel because
    # they install process-global test-binary dispatch state, and the remote
    # exec-server cases already rely on serialization around the full CLI path.
    integration_test_args = ["--test-threads=1"],
    integration_compile_data_extra = [
        "src/proto/anecdoct.exec_server.relay.v1.rs",
    ],
    extra_binaries = [
        "//anecdoct-rs/bwrap:bwrap",
    ],
    test_tags = ["no-sandbox"],
)
