[package]
name = "anecdoct-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "anecdoct-exec"
path = "src/main.rs"

[lib]
name = "anecdoct_exec"
path = "src/lib.rs"
doctest = false

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anecdoct-arg0 = { workspace = true }
anecdoct-app-server-client = { workspace = true }
anecdoct-app-server-protocol = { workspace = true }
anecdoct-cloud-requirements = { workspace = true }
anecdoct-config = { workspace = true }
anecdoct-core = { workspace = true }
anecdoct-feedback = { workspace = true }
anecdoct-git-utils = { workspace = true }
anecdoct-login = { workspace = true }
anecdoct-model-provider-info = { workspace = true }
anecdoct-otel = { workspace = true }
anecdoct-protocol = { workspace = true }
anecdoct-utils-absolute-path = { workspace = true }
anecdoct-utils-cli = { workspace = true }
anecdoct-utils-oss = { workspace = true }
anecdoct-utils-sandbox-summary = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
anecdoct-apply-patch = { workspace = true }
anecdoct-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
