[package]
name = "anecdoct-execpolicy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Anecdoct exec policy: prefix-based Starlark rules for command decisions."

[lib]
name = "anecdoct_execpolicy"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "anecdoct-execpolicy"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anecdoct-utils-absolute-path = { workspace = true }
multimap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
starlark = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
